2010-09-10  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Output Element Labels): add Section*,
	rm File*, etc., per Patrice.
	(Customizing Page Headers): rename + edit.

2010-09-09  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Navigation Panel Formatting Functions): rename+edit.

2010-09-08  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Output Element Lines),
	(Navigation Button Specification): rename + edit.
	(verb): mention that the delimiter character can appear inside the
	argument.

2010-09-07  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Output Element Labels): rename + edit.

2010-09-06  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\dosmartslant): localize font switch to \ttsl.
	Report from Bruno Haible, 29 Aug 2010 15:46:01.

	* doc/texinfo.tex (\lattwochardefs): define \ed and \ee using
	\dotless{i} rather than \i.  Report from Andrei Kholodnyi,
	3 Sep 2010 20:14:42.	

	* doc/texinfo.txi (Internationalization of Strings): edit.

2010-09-06  Roland Kaufmann  <roland.kaufmann@gmail.com>  (tiny change)

	* util/texi2dvi: new option --shell-escape.

2010-09-01  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Init File Expansion Contexts): edit.

2010-08-30  Sergey Poznyakoff  <gray@gnu.org.ua>

	* info/indices.c (do_info_index_search, index_entry_exists): Check
	for NULL return from file_buffer_of_window.  Patch proposed by
	Vitezslav Crhonek <vcrhonek@redhat.com>.

2010-08-28  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/texinfo.txi (Indexing Commands): Fix typo.

2010-08-28  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi: consistently capitalize after colons in
	@section, etc.

2010-08-26  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi: Systematize use of @@ vs. @code{@@}.

2010-08-25  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Init File General Block Commands): edit.

	* doc/texinfo.txi (Init File Global Information): split into subnodes,
	and merge in `Program String Customization'.

2010-08-21  Karl Berry  <karl@gnu.org>
